Fix horizontal overflow on mobile view

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 }
 body {
   background-color: rgb(0, 0, 0);
+  overflow-x: hidden;
 }
 .main {
   background-image: url(images/mainBG.jpg);
@@ -39,9 +40,8 @@ body {
 nav .buttons {
   z-index: 10;
   position: relative;
-  width: 120px;
   display: flex;
-  justify-content: space-between;
+  gap: 10px;
   align-items: center;
 }
 nav {
@@ -94,7 +94,6 @@ nav {
   font-size: 0.9rem;
   cursor: pointer;
   border-radius: 5px;
-  margin: 0px 10px;
   font-weight: 600;
   display: flex;
   align-items: center;
@@ -428,9 +427,6 @@ details.faq-wrapper[open] summary .plus {
     text-align: center;
     font-size: 16px;
     padding: 0 20px;
-  }
-  nav .buttons {
-    width: auto;
   }
   .btn {
     padding: 0.6rem 1rem;
